# rag_eval

./: .env.example  .gitignore  CLAUDE.md  README.md  REQUIREMENTS_V1.2.md  TECH_REVIEW_V1.2.md  UI_UPDATE_LOG.md  plan-iteration.md  requirement.md  requirements.txt  run.py  ui_improve_request.md
.claude/: ralph-loop.local.md  (+1 more)
rag_rag/: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt
rag_rag/config/: settings.yaml
rag_rag/docs/: API.md  CONFIGURATION.md  DATA_INGESTION.md  TROUBLESHOOTING.md
rag_rag/scripts/: generate_electronics_data.py  ingest_electronics_data.py  test_pipeline.py
rag_rag/src/rag_rag/: __init__.py
rag_rag/src/rag_rag/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py
rag_rag/src/rag_rag/degradation/: __init__.py  circuit_breaker.py  degradation_manager.py  fallback_handlers.py
rag_rag/src/rag_rag/graph/: __init__.py  graph.py  routers.py  state.py
rag_rag/src/rag_rag/graph/nodes/: __init__.py
rag_rag/src/rag_rag/ingestion/: __init__.py
rag_rag/src/rag_rag/prompts/: __init__.py  template_manager.py
rag_rag/src/rag_rag/services/: __init__.py  embedding_service.py  llm_service.py  rerank_service.py  sensitive_filter.py
rag_rag/src/rag_rag/storage/: __init__.py  base.py  faq_store.py  fulltext_store.py  graph_store.py  session_store.py  vector_store.py
rag_rag/tests/: conftest.py  test_e2e.py
rag_rag/tests/test_graph/: test_nodes.py  test_routers.py
rag_rag/tests/test_integration/: test_faq_branch.py  test_pipeline.py  test_refusal_branch.py  test_retrieval_branch.py
(+87 files in other folders)
